--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "twilio": "^5.1.0"
+    "twilio": "^5.1.0",
+    "uuid": "^10.0.0"
   }
 }
